Fixing errors in IDE and checksstyle